# course_work_7

./: .env  .env.sample  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginations.py  permissions.py  serializers.py  service.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_remove_habit_name.py  0004_alter_habit_periodicity.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py  user_create.py
users/migrations/: 0001_initial.py
